--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
   
 </head>
 <body>
+    <header>
     <div class = "container">
         <h1 class = titulo>MKE technology</h1>
+    
         <p class = paragrafo> 
         A MKE Tecnologia, fundada pelos sócios Marcus V, Keven R <br> e Erick A ,destaca-se como líder em 
         software e tecnologia.<br> Sua inovação, compromisso com clientes e  responsabilidade<br> social impulsionam
          o sucesso da empresa no mercado.</p>
         </div>
-    <div class="tarefas ">
+    </header>
+        <div class="tarefas ">
         <p> Lista das Nossas startup </p>
         <ul>
             <li>
@@ -48,9 +51,9 @@
         }
     </style>
 </head>
-<body>
+<footer>
     <img class="imagem-centro-pequena" src="image/a-ascensao-dos-humanoides-com-ia-generativa-de-capacetes-avancados.jpg" alt="Imagem Centralizada e Pequena">
-</body>
+</footer>
 </body>
 
 </html>
